--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "movabletypewriter",
   "version": "0.1.1",
   "devDependencies": {
+    "bower": "^1.8.0",
     "del": "^1.1.1",
+    "electron": "^1.4.15",
+    "electron-chrome": "https://github.com/koush/electron-chrome",
     "gulp": "^3.8.10",
     "gulp-pleeease": "^1.1.0",
     "gulp-plumber": "^0.6.6",
@@ -10,6 +13,11 @@
     "vinyl-paths": "^1.0.0"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=4.0.0"
+  },
+  "main": "main.js",
+  "scripts": {
+    "build": "bower install && gulp",
+    "start": "electron ./node_modules/electron-chrome/ --app-dir=./dist/ --app-id=movabletypewriter"
   }
 }
